# aquaview-fair-benchmark

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: fair-benchmark.yml
fair_benchmark/: __init__.py  __main__.py  config.py  delta.py  dual_mvp.py  fair_h.py  models.py  reporter.py  sampler.py  scorer.py
fair_benchmark/checks/: __init__.py  accessible.py  findable.py  interoperable.py  reusable.py
references/: FAIR_dual_framework_literature.md
reports/: AQUAVIEW_FAIR_Assessment_2026-03-09.json  AQUAVIEW_FAIR_Assessment_2026-03-09.md  AQUAVIEW_FAIR_Dual_2026-04-29.html
