[project]
name = "aquaview-fair-benchmark"
version = "0.1.0"
description = "Automated FAIR data principles benchmark for the AQUAVIEW oceanographic data platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AQUAVIEW Team", email = "joshhill@analyticsandsociety.com" },
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
fair-benchmark = "fair_benchmark.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["fair_benchmark"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
